Revise title and add meta tags for SEO
Updated the title and added meta tags for SEO and social sharing.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>চাটমোহর উপজেলার রমজানের সময়সূচী ২০২৬</title>
+
+<title>পবিত্র রমজানুল মোবারক উপলক্ষ্যে চাটমোহর উপজেলার ইফতার-সাহরীর ও নামাযের সময়সূচী।</title>
+<meta name="title" content="পবিত্র রমজানুল মোবারক উপলক্ষ্যে চাটমোহর উপজেলার ইফতার-সাহরীর ও নামাযের সময়সূচী।">
+<meta name="description" content="মোহাম্মাদ জয়নাল আবেদীনের ডেভেলপকৃত একটি আধুনিক ওয়েব এ্যাপ। যেখানে রমজানুল মোবারক ২০২৬ এর ইফতার-সাহরীর সময়সূচী ডিজিটাল প্রদ্ধতিতে প্রদান করা হয়েছে ।">
+
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://ramadanmubaruk2026.vercel.app/">
+<meta property="og:title" content="পবিত্র রমজানুল মোবারক উপলক্ষ্যে চাটমোহর উপজেলার ইফতার-সাহরীর ও নামাযের সময়সূচী। ">
+<meta property="og:description" content="মোহাম্মাদ জয়নাল আবেদীনের ডেভেলপকৃত একটি আধুনিক ওয়েব এ্যাপ। যেখানে রমজানুল মোবারক ২০২৬ এর ইফতার-সাহরীর সময়সূচী ডিজিটাল প্রদ্ধতিতে প্রদান করা হয়েছে ।  ">
+<meta property="og:image" content="https://ramadanmubaruk2026.vercel.app/ramadanMubaruk.jpg">
+
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://ramadanmubaruk2026.vercel.app">
+<meta property="twitter:title" content="পবিত্র রমজানুল মোবারক উপলক্ষ্যে চাটমোহর উপজেলার ইফতার-সাহরীর ও নামাযের সময়সূচী।">
+<meta property="twitter:description" content="মোহাম্মাদ জয়নাল আবেদীনের ডেভেলপকৃত একটি আধুনিক ওয়েব এ্যাপ। যেখানে রমজানুল মোবারক ২০২৬ এর ইফতার-সাহরীর সময়সূচী ডিজিটাল প্রদ্ধতিতে প্রদান করা হয়েছে। ">
+<meta property="twitter:image" content="https://ramadanmubaruk2026.vercel.app/ramadanMubaruk.jpg">
+
+    
     <meta name="theme-color" content="#064e3b">
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
