Update developer link in footer

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@ box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     <footer class="main-footer">
         <div class="footer-content">
             <p>&copy; ২০২৬ মাহে রমজান ক্যালেন্ডার। সর্বস্বত্ব সংরক্ষিত।</p>
-            <p>Developed with ❤️ by <a href="#" class="dev-name">Mohammad Joynal Abedin</a></p>
+            <p>Developed with ❤️ by <a href="https://www.facebook.com/joynal.abedin.9987" class="dev-name">Mohammad Joynal Abedin</a></p>
             <div class="footer-links">
 
             </div>
